--- a/visitLocations_customeHook/index.html
+++ b/visitLocations_customeHook/index.html
@@ -9,6 +9,6 @@
   <body>
     <div id="modal"></div>
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <script defer type="module" src="/src/main.jsx"></script>
   </body>
 </html>
